# not_aura_hack

./: README.md
docs/: README.md
docs/code/: code_style.md  object_programming.md  utils.md
docs/ros/: .ros_gitignore  new_ws.md  ros_readme.md  ros_wiki.md
docs/version_control/: branching_strategy.md  commits.md  cr.md  git_rules.md  vcstool_rules.md
ros2_projects_ws/: .gitignore  README.md
ros2_projects_ws/scripts/: distrobox  macros.bash  ros2_env.bash
ros2_projects_ws/src/: README.md
ros2_projects_ws/src/Web_Speech_remote_control/: README.md  README_g1.md
ros2_projects_ws/src/Web_Speech_remote_control/sros2_ws/: README.md
ros2_projects_ws/src/Web_Speech_remote_control/sros2_ws/mqtt_certs/: mosquitto.conf  mqtt_broker.crt  mqtt_broker.csr  mqtt_broker.key  mqtt_client_node.crt  mqtt_client_node.csr  mqtt_client_node.key  sec_mosquitto.conf
ros2_projects_ws/src/Web_Speech_remote_control/sros2_ws/policies/: teleop.policy.xml
ros2_projects_ws/src/Web_Speech_remote_control/sros2_ws/teleop_keystore/enclaves/: governance.xml
ros2_projects_ws/src/Web_Speech_remote_control/sros2_ws/teleop_keystore/private/: identity_ca.key.pem
ros2_projects_ws/src/Web_Speech_remote_control/teleop_ws/: .gitignore
ros2_projects_ws/src/Web_Speech_remote_control/teleop_ws/src/teleop_bringup/: README.md  package.xml  setup.py
ros2_projects_ws/src/Web_Speech_remote_control/teleop_ws/src/teleop_bringup/launch/: g1_arm_control.launch.py  teleop_system.launch.py
ros2_projects_ws/src/Web_Speech_remote_control/teleop_ws/src/teleop_hand_eye_tracking/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
ros2_projects_ws/src/Web_Speech_remote_control/teleop_ws/src/teleop_moving_window/: CMakeLists.txt  README.md  apt_packages.txt  desktop_screen_stream_node.cpp  desktop_screen_viewer_node.cpp  imu_virtual_camera.py  laptop_camera_stream_node.py  package.xml  people_tracker_node.py
ros2_projects_ws/src/Web_Speech_remote_control/teleop_ws/src/teleop_moving_window/assets/: dog_billboard.dae
ros2_projects_ws/src/Web_Speech_remote_control/teleop_ws/src/teleop_xreal_oak/: README.md  package.xml  setup.cfg  setup.py
ros2_projects_ws/src/Web_Speech_remote_control/teleop_ws/src/teleop_xreal_oak/launch/: camera.launch.py  oak_urdf.launch.py  xreal_imu.launch.py  (+1 more)
(+32 files in other folders)
